Small fixing um button overlaping eachother

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -63,7 +63,7 @@
 .Limpar{
     position: fixed;
     bottom: 24px;
-    right: 200px;
+    right: 300px;
 }
 
 .HomeDirector{
